# cpp_wasm_pybind

./: CMakeLists.txt  LICENSE  README.md  build_wasm.sh
src/: Foo.cpp  Foo.h
src/pybind/: Foo_pybind.cpp
src/wasm/: Foo_wasm.cpp  main.cpp
